# antsnetct

./: Dockerfile  README.md  build_docker_tag.sh  build_docker_unstable.sh  git_tag.py  local_install.sh  pyproject.toml  selected_antspynet_data.txt  selected_antspynet_networks.txt
antsnetct/: __init__.py  analysis.py  ants_helpers.py  antshelpers.py  bids_helpers.py  cross_sectional_pipeline.py  log_config.py  longitudinal_pipeline.py  parcellation_pipeline.py  preprocessing.py  run.py  run_parcellation.py  system_helpers.py
antsnetct/data/: __init__.py
antsnetct/data/label_definitions/: antspynet_cerebellum.tsv  dkt31.tsv  hoa_subcortical.tsv
scripts/: trim_neck.sh
