[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["antsnetct*"]

[tool.setuptools.package-data]
antsnetct = ["data/**/*.tsv"]

[tool.setuptools]
include-package-data = true

[project]
name = "antsnetct"
version = "0.5.5dev"
authors = [{ name = "Philip Cook", email = "cookpa@pennmedicine.upenn.edu" }]
description = "ANTsPyNet cortical thickness"
readme = "README.md"
license = 'Apache-2.0'
license-files = ["LICENSE"]
keywords = ["ANTsPyNet", "ANTsPy", "neuroimaging", "thickness"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

dependencies = [
    "antspynet",
    "antspyx>=0.5.4",
    "filelock",
    "imageio",
    "pillow",
    "pybids>=0.17.2",
    "templateflow>=24.2.0"
]

[project.urls]
homepage = "https://github.com/ftdc-picsl/antsnetct"
documentation = "https://github.com/ftdc-picsl/antsnetct/blob/main/README.md"
repository = "https://github.com/ftdc-picsl/antsnetct"

[project.scripts]
antsnetct = "antsnetct.run:main"
antsnetct_parcellate = "antsnetct.run_parcellation:main"
# To be added later
# antsnetct_labelstats = "antsnetct.run_label_stats:main"
